# decentdb

./: --  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  bench_pager  bench_pager.nim  bench_scan  bench_scan.nim  bench_varint  bench_varint.nim  benchmark_output.txt  debug_ast  debug_parser  debug_parser.nim  debug_plan  debug_plan.nim  decentdb.nimble  fix_adrs.sh  kilo.jsonc  mkdocs.yml  nim.cfg  plan.md  snippet.nim  test_nowal_bench.nim  test_pk_fk.ddb-wal  test_quick_compile
benchmarks/rust-baseline/: Cargo.toml  README.md
benchmarks/rust-baseline/results/: 2026-04-26-2203-rust-baseline-full.json  2026-04-26-2203-rust-baseline-medium.json  2026-04-26-2203-rust-baseline-smoke.json  2026-04-27-1116-rust-baseline-full.json  2026-04-27-1116-rust-baseline-medium.json  2026-04-27-1407-rust-baseline-medium.json  2026-04-27-1408-rust-baseline-full.json  2026-04-27-1416-rust-baseline-full.json  2026-04-27-1419-rust-baseline-huge.json  2026-04-27-1420-rust-baseline-full.json  2026-04-28-1156-rust-baseline-full.json  2026-04-28-1156-rust-baseline-medium.json  2026-04-28-1156-rust-baseline-smoke.json  2026-04-28-1158-rust-baseline-huge.json  2026-04-28-1625-rust-baseline-full.json  2026-04-28-1625-rust-baseline-smoke.json  2026-04-28-1627-rust-baseline-huge.json  2026-04-28-2135-rust-baseline-huge.json  2026-04-29-0317-rust-baseline-medium.json  2026-04-29-0317-rust-baseline-smoke.json  2026-04-29-0318-rust-baseline-full.json  2026-04-29-0320-rust-baseline-huge.json  2026-04-29-1317-rust-baseline-full.json  2026-04-29-1332-rust-baseline-huge.json  2026-04-29-1334-rust-baseline-medium.json  2026-04-29-1334-rust-baseline-smoke.json  2026-04-29-1833-rust-baseline-smoke.json  2026-04-29-1834-rust-baseline-full.json  2026-04-29-1834-rust-baseline-medium.json  2026-04-29-1837-rust-baseline-huge.json  2026-04-30-0250-rust-baseline-smoke.json  2026-04-30-0251-rust-baseline-full.json  2026-04-30-0251-rust-baseline-medium.json  2026-04-30-0254-rust-baseline-huge.json  2026-05-19-1214-rust-baseline-default-medium.json  2026-05-19-1215-rust-baseline-default-smoke.json  2026-05-19-1216-rust-baseline-default-full.json  2026-05-19-1217-rust-baseline-default-huge.json  2026-05-20-0338-rust-baseline-default-medium.json  2026-05-28-0306-rust-baseline-default-full.json  (+34 more)
benchmarks/rust-baseline/src/: main.rs  memory_probe.rs  query_probe.rs  seed_only.rs
bindings/python/: :memory:  :memory:-wal  README.md  bench_complex_sqlite.db-shm  bench_complex_sqlite.db-wal  pyproject.toml
bindings/python/.tmp/: bench_complex_results.json
bindings/python/benchmarks/: bench_complex.py  bench_fetch.py
bindings/python/decentdb/: __init__.py  _fastdecode.c  native.py
bindings/python/decentdb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bindings/python/decentdb_sqlalchemy/: __init__.py  dialect.py
bindings/python/showcase/: abacus-python-memory-leak-tests.py  claudesonnet46-python-memory-leak-tests.py  comprehensive-memory-leak-tests.py  crm_showcase.py  debug_test.py  glm51-python-memory-leak-tests.py  gpt54-python-memory-leak-tests.py  grok4-python-memory-leak-tests.py  kimi25-python-memory-leak-tests.py  memory-leaks-prompt.md  memory_leak_probe.py  memory_leak_test.py  mimov2omni-python-memory-leak-tests.py  nemo3super-python-memory-leak-tests.py  opus47-python-memory-leak-tests.py  qwen36-python-memory-leak-tests.py  simple_test.py
bindings/python/tests/: conftest.py  test_api_coverage.py  test_basic.py  test_cache.py  test_comprehensive.py  test_concurrency_stress.py  test_coverage_decimal.py  test_coverage_gaps.py  test_cross_connection_visibility.py  test_cursor_cache_bounded.py  test_datatypes.py  test_decimal.py  test_edge_cases.py  test_explain_analyze.py  test_fulltext_showcase.py  test_lifecycle_leak_smoke.py  test_memory_leak.py  test_open_close_leak.py  test_pgbak_import.py  test_process_coordination.py  test_relationships.py  test_resource_management.py  test_save_as.py  test_schema_introspection.py  test_sqlalchemy.py  test_sqlite_import.py  test_threading.py  test_types_sqlalchemy.py  test_v2_features.py  test_valgrind_memcheck.py
crates/decentdb/: Cargo.toml  build.rs
crates/decentdb-benchmark/: Cargo.toml
crates/decentdb-benchmark/src/: artifacts.rs  baseline.rs  cli.rs  compare.rs  lib.rs  main.rs  profiles.rs  report.rs  runner.rs  scenarios.rs  storage_inspector.rs  targets.rs  types.rs
crates/decentdb-cli/: Cargo.toml
crates/decentdb-cli/src/: main.rs  output.rs  repl.rs  serve.rs
crates/decentdb-cli/tests/: cli_doctor_tests.rs  cli_phase4_tests.rs  cli_serve_tests.rs  sync_cli_tests.rs
crates/decentdb-migrate/: Cargo.toml
crates/decentdb-migrate/src/: main.rs  v3.rs
crates/decentdb/benches/: embedded_compare.rs  micro_hot_paths.rs  micro_hot_paths_callgrind.rs  plan_cache.rs  release_metrics.rs
crates/decentdb/src/: alloc.rs  benchmark.rs  branch.rs  browser_result.rs  c_api.rs  c_api_legacy.rs  config.rs  db.rs  doctor.rs  doctor.rs.bak  error.rs  extensions.rs  json.rs  json_tests.rs  lib.rs  metadata.rs  plan_cache.rs  reactive.rs  security.rs  sync.rs  tooling.rs  wasm.rs  write_queue.rs
crates/decentdb/tests/: coverage_batch10_tests.rs  coverage_batch11_tests.rs  coverage_batch12_tests.rs  coverage_batch13_tests.rs  coverage_batch2_tests.rs  coverage_batch3_tests.rs  coverage_batch4_tests.rs  coverage_batch5_tests.rs  coverage_batch6_tests.rs  coverage_batch7_tests.rs  coverage_batch8_tests.rs  coverage_batch9_tests.rs  coverage_exercise_tests.rs  coverage_improvement_tests.rs  create_validation_tests.rs  debug_ast.rs  engine_api_tests.rs  engine_coverage_tests.rs  engine_lifecycle_tests.rs  fulltext_search_tests.rs  local_security_tests.rs  lua_extensions_tests.rs  matrix_regression_tests.rs  miri_smoke_tests.rs  on_conflict_update_tests.rs  reactive_tests.rs  relational_phase3_tests.rs  row_id_persistence_tests.rs  runtime_tracing_integration_tests.rs  slice2_ast_test.rs  slice2_execution_test.rs  sql_aggregates_tests.rs  sql_alter_table_fk.rs  sql_create_table_fk.rs  sql_dml_tests.rs  (+36 more)
(+1530 files in other folders)
