[workspace]
members = [
    "crates/decentdb",       # Core database engine
    "crates/decentdb-cli",   # CLI application
    "crates/decentdb-benchmark", # Rust-native benchmark runner
    "crates/libpg_query_sys",    # Pinned SQL parser wrapper
    "crates/decentdb-migrate",   # Migration tooling
]
resolver = "2"

[workspace.package]
version = "2.3.0"
edition = "2021"
authors = ["Steven Hildreth"]
license = "Apache-2.0"
repository = "https://github.com/sphildreth/decentdb"

[workspace.dependencies]
# Error handling
thiserror = "2.0"
anyhow = "1.0"
miniz_oxide = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }
rustyline = "15.0"
