[package]
name = "decentdb-rust-baseline"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "rust-baseline"
path = "src/main.rs"
required-features = ["default"]

[[bin]]
name = "memory-probe"
path = "src/memory_probe.rs"

[[bin]]
name = "query-probe"
path = "src/query_probe.rs"

[[bin]]
name = "seed-only"
path = "src/seed_only.rs"

[features]
default = []

[dependencies]
decentdb = { path = "../../crates/decentdb" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
