[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decentdb"
version = "0.0.1"
description = "Python DB-API 2.0 driver and SQLAlchemy dialect for DecentDB"
readme = "README.md"
authors = [
  { name = "DecentDB Contributors" },
]
classifiers = [
  "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "SQLAlchemy>=2.0.0",
  "rich>=13.0.0",
]

[project.scripts]
decentdb-sqlite-import = "decentdb.tools.sqlite_import:main"
decentdb-pgbak-import = "decentdb.tools.pgbak_import:main"

[project.entry-points."sqlalchemy.dialects"]
decentdb = "decentdb_sqlalchemy.dialect:DecentDbDialect"
"decentdb.pysql" = "decentdb_sqlalchemy.dialect:DecentDbDialect"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.setuptools.packages.find]
where = ["."]
include = ["decentdb*", "decentdb_sqlalchemy*"]
exclude = ["tests*", "benchmarks*", "__pycache__*"]
