[package]
name = "decentdb-benchmark"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
decentdb = { path = "../decentdb" }
hdrhistogram = "7.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.14"
