[package]
name = "decentdb-benchmark"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
decentdb = { path = "../decentdb", features = ["bench-internals"] }
hdrhistogram = "7.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.14"
