[package]
name = "decentdb-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
decentdb = { path = "../decentdb" }
clap.workspace = true
anyhow.workspace = true
serde_json = "1.0"
rustyline.workspace = true
mimalloc = { version = "0.1", default-features = false, optional = true }

[features]
# Opt-in low-fragmentation allocator. See ADR 0139.
mimalloc = ["dep:mimalloc"]

[[bin]]
name = "decentdb"
path = "src/main.rs"
