[package]
name = "decentdb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
bench-internals = []

[dependencies]
thiserror.workspace = true
miniz_oxide.workspace = true
libpg_query_sys = { path = "../libpg_query_sys" }
chrono = "0.4"
regex = "1.11"
md5 = "0.7"
sha2 = "0.10"

[dev-dependencies]
criterion = "0.5"
iai-callgrind = "0.14"
proptest = "1.5"
insta = { version = "1.39", features = ["json"] }
rusqlite = "0.31"
duckdb = { version = "1.0", features = ["bundled"] }
hdrhistogram = "7.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
rand = "0.8"

[lib]
crate-type = ["rlib", "cdylib"]

[[bench]]
name = "release_metrics"
harness = false

[[bench]]
name = "embedded_compare"
harness = false

[[bench]]
name = "micro_hot_paths"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "micro_hot_paths_callgrind"
harness = false
required-features = ["bench-internals"]
