[package]
name = "decentdb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["lua-extensions"]
bench-internals = []
lua-extensions = ["dep:mlua"]

[dependencies]
thiserror.workspace = true
miniz_oxide.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
regex = "1.11"
md5 = "0.7"
sha2 = "0.10"
smallvec = "1.15"
toml = "0.8"
base64 = "0.22"
chacha20 = "0.9"
ed25519-dalek = { version = "2.1", default-features = false, features = ["std"] }
zeroize = "1.8"

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
getrandom = "0.3"
libc = "0.2"
libpg_query_sys = { path = "../libpg_query_sys" }
mlua = { version = "0.11", optional = true, features = ["lua54", "vendored", "send"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"

[dev-dependencies]
criterion = "0.5"
iai-callgrind = "0.14"
proptest = "1.5"
insta = { version = "1.39", features = ["json"] }
rusqlite = "0.31"
duckdb = { version = "1.0", features = ["bundled"] }
hdrhistogram = "7.5"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.10"
rand = "0.8"

[lib]
crate-type = ["rlib", "cdylib"]

[[bench]]
name = "release_metrics"
harness = false

[[bench]]
name = "embedded_compare"
harness = false

[[bench]]
name = "micro_hot_paths"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "micro_hot_paths_callgrind"
harness = false
required-features = ["bench-internals"]

[[bin]]
name = "wal_fuzz"
test = false
bench = false
